--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 backports.zoneinfo==0.2.1
 Django==4.2.2
 gunicorn==20.1.0
+python-dotenv==1.0.0
 sqlparse==0.4.4
 typing-extensions==4.7.1
 whitenoise==6.5.0
